[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]
[ext_resource path="res://GFX/HUD/bannerHanging.png" type="Texture" id=2]
[ext_resource path="res://Fonts/candles_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://GFX/HUD/coin_bronze.png" type="Texture" id=4]
[ext_resource path="res://GFX/HUD/lifes.png" type="Texture" id=5]

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 1256.0
margin_bottom = 696.0
alignment = 2

[node name="CoinLifeHUD" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
margin_left = 964.0
margin_right = 1232.0
margin_bottom = 672.0
texture = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD/MarginContainer"]
margin_left = 12.0
margin_right = 256.0
margin_bottom = 660.0
custom_constants/separation = 16
alignment = 1

[node name="CoinHUD" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD/MarginContainer/HBoxContainer"]
margin_left = 22.0
margin_right = 118.0
margin_bottom = 660.0

[node name="CoinCount" type="Label" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD/MarginContainer/HBoxContainer/CoinHUD"]
margin_right = 32.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="CoinIcon" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD/MarginContainer/HBoxContainer/CoinHUD"]
margin_left = 36.0
margin_right = 96.0
margin_bottom = 660.0
texture = ExtResource( 4 )

[node name="LifeHUD" type="HBoxContainer" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD/MarginContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 222.0
margin_bottom = 660.0

[node name="LifeCount" type="Label" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD/MarginContainer/HBoxContainer/LifeHUD"]
margin_right = 32.0
margin_bottom = 660.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="LifeIcon" type="TextureRect" parent="Control/MarginContainer/HBoxContainer/CoinLifeHUD/MarginContainer/HBoxContainer/LifeHUD"]
margin_left = 36.0
margin_right = 88.0
margin_bottom = 660.0
texture = ExtResource( 5 )
